renamed from typecheck to compile

--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "format": "prettier . --check --config ./.prettierrc.js --ignore-path .prettierignore",
     "format-fix": "prettier . --write --config ./.prettierrc.js --ignore-path .prettierignore",
     "test": "node --test",
-    "build": "pnpm run pretypecheck && pnpm run typecheck && pnpm run posttypecheck",
     "preversion": "npm test",
     "version": "npm run format-fix && npm run build",
     "postversion": "git push && git push --tags && cd dist && npm publish",
-    "pretypecheck": "rm -rf dist",
-    "typecheck": "tsc -p jsconfig.json",
-    "posttypecheck": "node ./toolbox/postTypecheck",
+    "precompile": "rm -rf dist",
+    "compile": "tsc -p jsconfig.json",
+    "postcompile": "node ./toolbox/postCompile",
+    "full-compile": "pnpm run precompile && pnpm run compile && pnpm run postcompile",
     "prepare": "husky install"
   },
   "sideEffects": false,
