renamed scripts: changed from compile to build

--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "preversion": "npm test",
     "version": "npm run format-fix && npm run build",
     "postversion": "git push && git push --tags && cd dist && npm publish",
-    "precompile": "rm -rf dist",
-    "compile": "tsc -p jsconfig.json",
-    "postcompile": "node ./toolbox/postCompile",
-    "full-compile": "pnpm run precompile && pnpm run compile && pnpm run postcompile",
+    "build:pre": "rm -rf dist",
+    "build:intermediate": "tsc -p jsconfig.json",
+    "build:post": "node ./toolbox/postBuild",
+    "build": "pnpm run build:pre && pnpm run build:intermediate && pnpm run build:post",
     "prepare": "husky install"
   },
   "sideEffects": false,
