--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.5.2",
+    "@changesets/cli": "^2.27.3",
     "@types/node": "^20.11.0",
     "eslint": "^8.54.0",
     "eslint-plugin-ezlint": "^1.2.1",
