added a bunch of cs scripts

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "format-prettier": "prettier . --check --config ./.prettierrc.js --ignore-path .prettierignore",
     "format-prettier-fix": "prettier . --write --config ./.prettierrc.js --ignore-path .prettierignore",
     "test": "node --test",
+    "cs-commit": "pnpm changeset",
+    "cs-status": "pnpm changeset status",
+    "cs-bump": "pnpm changeset version",
+    "cs-publish": "npm test && npm run format-fix && npm run build && pnpm changeset publish",
     "preversion": "npm test",
     "version": "npm run format-fix && npm run build",
     "postversion": "git push && git push --tags && cd dist && npm publish",
