--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format-prettier-fix": "prettier . --write --config ./.prettierrc.js --ignore-path .prettierignore",
     "test": "node --test",
     "cs-commit": "pnpm changeset",
-    "cs-status": "pnpm changeset status",
+    "cs-status": "pnpm changeset status --verbose",
     "cs-bump": "pnpm changeset version",
     "cs-publish": "npm test && npm run format-fix && npm run build && pnpm changeset publish",
     "preversion": "npm test",
