--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.1.1",
   "description": "A bunch of lodash-like methods",
   "private": "true",
-  "main": "lib/index.js",
-  "module": "lib/index.js",
-  "types": "index.d.ts",
+  "main": "dist/lib/index.js",
+  "module": "dist/lib/index.js",
+  "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
     "clean": "rm -rf node_modules",
