--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@talkohavy/lodash",
   "version": "1.1.1",
   "description": "A bunch of lodash-like methods",
-  "private": "true",
   "main": "dist/lib/index.js",
   "module": "dist/lib/index.js",
   "types": "dist/index.d.ts",
@@ -19,7 +18,8 @@
     "cs-commit": "pnpm changeset",
     "cs-status": "pnpm changeset status --verbose",
     "cs-bump": "pnpm changeset version",
-    "cs-publish": "npm test && npm run format-fix && npm run build && pnpm changeset publish",
+    "cs-publish2": "npm test && npm run format-fix && npm run build && pnpm changeset publish",
+    "cs-publish": "pnpm changeset publish",
     "preversion": "npm test",
     "version": "npm run format-fix && npm run build",
     "postversion": "git push && git push --tags && cd dist && npm publish",
@@ -45,7 +45,7 @@
   "license": "MIT",
   "publishConfig": {
     "registry": "https://registry.npmjs.org/",
-    "access": "restricted"
+    "access": "public"
   },
   "exports": {
     ".": {
