--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "cs-add": "pnpm changeset add",
     "cs-status": "pnpm changeset status --verbose",
     "cs-bump": "npm test && pnpm changeset version",
-    "cs-publish": "npm run build && pnpm changeset publish",
+    "cs-publish": "npm run build && cd dist && pnpm changeset publish",
     "build:pre": "rm -rf dist",
     "build:intermediate": "tsc -p jsconfig.json",
     "build:post": "node ./toolbox/postBuild",
