--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@talkohavy/lodash",
   "version": "1.1.6",
   "description": "A bunch of lodash-like methods",
-  "main": "dist/lib/index.js",
-  "module": "dist/lib/index.js",
-  "types": "dist/index.d.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "types": "index.d.ts",
   "type": "module",
   "scripts": {
     "clean": "rm -rf node_modules",
@@ -47,8 +47,8 @@
   },
   "exports": {
     ".": {
-      "import": "./dist/lib/index.js",
-      "require": "./dist/lib/index.cjs"
+      "import": "./lib/index.js",
+      "require": "./lib/index.cjs"
     },
     "./addItemToList": "./lib/addItemToList.js",
     "./areObjectsEqual": "./lib/areObjectsEqual.js",
