--- a/package.json
+++ b/package.json
@@ -77,8 +77,8 @@
   },
   "scripts": {
     "clean": "rm -rf node_modules",
-    "lint": "eslint -c ./.eslintrc.json --ignore-path ./.eslintignore 'src/**/*.{js,jsx,tsx,ts,d.ts,cjs,mjs}'",
-    "lint-fix": "eslint --fix -c ./.eslintrc.json --ignore-path ./.eslintignore 'src/**/*.{js,jsx,tsx,ts,d.ts,cjs,mjs}'",
+    "lint": "eslint -c eslint.config.js",
+    "lint:fix": "eslint --fix -c eslint.config.js",
     "format": "biome format --verbose ./src",
     "format-fix": "biome format --verbose ./src --write",
     "format-prettier": "prettier . --check --config ./.prettierrc.js --ignore-path .prettierignore",
@@ -118,12 +118,15 @@
   "devDependencies": {
     "@biomejs/biome": "1.7.3",
     "@changesets/cli": "^2.27.3",
-    "@types/node": "^20.12.12",
-    "eslint": "^8.54.0",
-    "eslint-plugin-ezlint": "^1.6.2",
+    "@eslint/js": "^9.18.0",
+    "@types/node": "^22.10.7",
+    "eslint": "^9.18.0",
+    "eslint-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
     "glob": "^10.4.1",
+    "globals": "^15.14.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^8.20.0"
   }
 }
