--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "globals": "^15.14.0",
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
+    "rollup": "^4.30.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.20.0"
   }
