--- a/package.json
+++ b/package.json
@@ -2,80 +2,20 @@
   "name": "@talkohavy/lodash",
   "version": "1.3.2",
   "description": "A bunch of lodash-like methods",
-  "main": "lib/index.js",
-  "module": "lib/index.js",
-  "types": "index.d.ts",
+  "main": "index.esm.mjs",
+  "module": "index.esm.mjs",
+  "types": "types/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
       "import": {
-        "types": "./index.d.ts",
-        "default": "./lib/index.js"
+        "types": "./types/index.d.ts",
+        "default": "./index.esm.mjs"
       },
       "require": {
-        "types": "./index.d.ts",
-        "default": "./lib/index.cjs"
+        "types": "./types/index.d.ts",
+        "default": "./index.cjs.cjs"
       }
-    },
-    "./addItemToList": {
-      "types": "./addItemToList.d.ts",
-      "default": "./lib/addItemToList.js"
-    },
-    "./areObjectsEqual": {
-      "types": "./areObjectsEqual.d.ts",
-      "default": "./lib/areObjectsEqual.js"
-    },
-    "./decodeBase64": {
-      "types": "./decodeBase64.d.ts",
-      "default": "./lib/decodeBase64.js"
-    },
-    "./deepMerge": {
-      "types": "./deepMerge.d.ts",
-      "default": "./lib/deepMerge.js"
-    },
-    "./encodeBase64": {
-      "types": "./encodeBase64.d.ts",
-      "default": "./lib/encodeBase64.js"
-    },
-    "./getArrMaxValue": {
-      "types": "./getArrMaxValue.d.ts",
-      "default": "./lib/getArrMaxValue.js"
-    },
-    "./isEmpty": {
-      "types": "./isEmpty.d.ts",
-      "default": "./lib/isEmpty.js"
-    },
-    "./isNullish": {
-      "types": "./isNullish.d.ts",
-      "default": "./lib/isNullish.js"
-    },
-    "./isObject": {
-      "types": "./isObject.d.ts",
-      "default": "./lib/isObject.js"
-    },
-    "./removeItemFromList": {
-      "types": "./removeItemFromList.d.ts",
-      "default": "./lib/removeItemFromList.js"
-    },
-    "./removeItemFromListByIndex": {
-      "types": "./removeItemFromListByIndex.d.ts",
-      "default": "./lib/removeItemFromListByIndex.js"
-    },
-    "./replaceItemOnListWith": {
-      "types": "./replaceItemOnListWith.d.ts",
-      "default": "./lib/replaceItemOnListWith.js"
-    },
-    "./times": {
-      "types": "./times.d.ts",
-      "default": "./lib/times.js"
-    },
-    "./wrapInDebounce": {
-      "types": "./wrapInDebounce.d.ts",
-      "default": "./lib/wrapInDebounce.js"
-    },
-    "./wrapInThrottle": {
-      "types": "./wrapInThrottle.d.ts",
-      "default": "./lib/wrapInThrottle.js"
     }
   },
   "scripts": {
@@ -87,14 +27,7 @@
     "format-prettier": "prettier . --check --config ./.prettierrc.js --ignore-path .prettierignore",
     "format-prettier-fix": "prettier . --write --config ./.prettierrc.js --ignore-path .prettierignore",
     "build": "node ./build.config.js",
-    "test": "node --test",
-    "cs-add": "pnpm changeset add",
-    "cs-status": "pnpm changeset status --verbose",
-    "cs-bump": "npm test && pnpm changeset version",
-    "cs-publish": "npm run build && cd dist && pnpm changeset publish",
-    "old-way-preversion": "npm test",
-    "old-way-version": "npm run format-fix && npm run build",
-    "old-way-postversion": "git push && git push --tags && cd dist && npm publish"
+    "test": "node --test"
   },
   "sideEffects": false,
   "contributors": [
@@ -122,6 +55,8 @@
     "@biomejs/biome": "1.7.3",
     "@changesets/cli": "^2.27.3",
     "@eslint/js": "^9.18.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "12.1.0",
     "@types/node": "^22.10.7",
     "eslint": "^9.18.0",
     "eslint-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
@@ -130,6 +65,7 @@
     "husky": "^9.0.11",
     "prettier": "^3.2.5",
     "rollup": "^4.30.1",
+    "tslib": "^2.8.1",
     "typescript": "^5.4.5",
     "typescript-eslint": "^8.20.0"
   }
