--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,16 +15,16 @@ jobs:
       # Step 2: Set up pnpm
       - uses: pnpm/action-setup@v2
         with:
-          version: 8
+          version: 9
 
       # Step 3: Set up node
       - uses: actions/setup-node@v3
         with:
-          node-version: 20.x
+          node-version: 22.x
           cache: 'pnpm'
 
       # Step 3: Run pnpm install
-      - run: pnpm install --frozen-lockfile
+      - run: pnpm install
 
       # Step 4: Run pnpm lint & build
       - run: pnpm run lint && pnpm run build
