--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,8 @@
         "noExplicitAny": "off",
         "noGlobalIsNan": "off",
         "noAssignInExpressions": "off",
-        "noArrayIndexKey": "off"
+        "noArrayIndexKey": "off",
+        "noFocusedTests": "off"
       },
       "correctness": {
         "useExhaustiveDependencies": "off"
