--- a/package.json
+++ b/package.json
@@ -52,21 +52,21 @@
     "email": "talkohavy@gmail.com"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.7.3",
-    "@changesets/cli": "^2.27.3",
-    "@eslint/js": "^9.18.0",
+    "@biomejs/biome": "1.9.4",
+    "@changesets/cli": "^2.29.4",
+    "@eslint/js": "^9.27.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@rollup/plugin-typescript": "12.1.0",
-    "@types/node": "^22.10.7",
-    "eslint": "^9.18.0",
-    "eslint-plugin-react-compiler": "19.0.0-beta-e552027-20250112",
-    "glob": "^10.4.1",
-    "globals": "^15.14.0",
-    "husky": "^9.0.11",
-    "prettier": "^3.2.5",
-    "rollup": "^4.30.1",
+    "@rollup/plugin-typescript": "12.1.2",
+    "@types/node": "^22.15.21",
+    "eslint": "^9.27.0",
+    "eslint-plugin-react-compiler": "19.1.0-rc.2",
+    "glob": "^11.0.2",
+    "globals": "^16.1.0",
+    "husky": "^9.1.7",
+    "prettier": "^3.5.3",
+    "rollup": "^4.41.0",
     "tslib": "^2.8.1",
-    "typescript": "^5.4.5",
-    "typescript-eslint": "^8.20.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1"
   }
 }
