--- a/tsconfig.json
+++ b/tsconfig.json
@@ -67,8 +67,8 @@
     "noEmitOnError": true, // Disable emitting files if any type checking errors are reported.
     "removeComments": false, // Disable emitting comments.
     "declarationDir": "./dist/types", // Specify the output directory for generated declaration files.
+    "emitDeclarationOnly": true /* Only output d.ts files and not JavaScript files. */,
     // "declarationMap": true,                           /* Create sourcemaps for d.ts files. */
-    // "emitDeclarationOnly": true,                      /* Only output d.ts files and not JavaScript files. */
     // "inlineSourceMap": true,                          /* Include sourcemap files inside the emitted JavaScript. */
     // "outFile": "./",                                  /* Specify a file that bundles all outputs into one JavaScript file. If 'declaration' is true, also designates a file that bundles all .d.ts output. */
     // "importHelpers": true,                            /* Allow importing helper functions from tslib once per project, instead of including them per-file. */
